fix overflowing badges

--- a/src/_styles/elements/_projects.scss
+++ b/src/_styles/elements/_projects.scss
@@ -34,9 +34,11 @@
 
                 .technologies {
                     display: flex;
+                    flex-wrap: wrap;
 
                     .badge {
                         margin-right: 0.5rem;
+                        margin-bottom: 0.5rem;
                         padding: 0.25rem 0.5rem;
                         background-color: var(--primary);
                         color: var(--text-primary);
